[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rigour"
version = "1.6.2"
description = "Financial crime domain data validation and normalization library."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenSanctions", email = "info@opensanctions.org" }]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.10"
dependencies = [
    "pyicu >= 2.0.0, < 3.0.0",
    "babel >= 2.9.1, < 3.0.0",
    "pyyaml >= 5.0.0, < 7.0.0",
    "banal >= 1.0.6, < 1.1.0",
    "normality >= 3.0.1, < 4.0.0",
    "jellyfish >= 1.0.0, < 2.0.0",
    "rapidfuzz >= 3.9.0, < 4.0.0",
    "orjson >= 3.0.0, < 4.0.0",
    "fingerprints >= 1.0.1, < 2.0.0",
    "python-stdnum >= 2.0, < 3.0.0",
    "jinja2 >= 3.1.0, < 4.0.0",
    "ahocorasick-rs >= 0.22.0, < 1.1.0",
]

[project.urls]
Documentation = "https://rigour.followthemoney.tech/"
Repository = "https://github.com/opensanctions/rigour.git"
Issues = "https://github.com/opensanctions/rigour/issues"

[project.optional-dependencies]
dev = [
    "pip>=10.0.0",
    "bump2version",
    "wheel>=0.29.0",
    "black",
    "build",
    "twine",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "types-PyYAML",
    "coverage>=4.1",
]
docs = [
    "pillow",
    "cairosvg",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[project.entry-points."babel.extractors"]

[tool.maturin]
python-source = "."
module-name = "rigour._core"
features = ["pyo3/extension-module"]
strip = true
manifest-path = "rigour-core/Cargo.toml"

# Include Python source and Rust crate
include = ["rigour/**/*.py", "rigour/data/**/*", "rigour-core/**/*"]
exclude = ["genscripts/**/*"]

# [tool.pytest.ini_options]
# asyncio_default_fixture_loop_scope = "function"

[tool.distutils.bdist_wheel]
universal = false

[tool.coverage.run]
branch = true
