[package]
name = "rigour-core"
version = "1.6.2"
edition = "2021"
rust-version = "1.70"
authors = ["OpenSanctions <info@opensanctions.org>"]
license = "MIT"
description = "Performance-critical core for rigour library"
repository = "https://github.com/opensanctions/rigour"

[lib]
name = "rigour_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
unicode-normalization = "0.1"
unicode-general-category = "1.1"
unicode-casefold = "0.2"
once_cell = "1.19"
rust_icu_utrans = "5.0"
rust_icu_sys = "5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "addresses"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
