[package]
name = "rigour-core"
version = "2.0.1"
edition = "2024"
rust-version = "1.86"
license = "MIT"
description = "Rust core for the rigour Python library."

[lib]
name = "rigour_core"
crate-type = ["cdylib", "rlib"]

[features]
# Gating the PyO3 bindings behind a feature lets `cargo test` / `cargo build`
# exercise pure-Rust logic without needing a Python runtime or libpython at link
# time. Maturin enables this via `[tool.maturin].features` in pyproject.toml.
python = ["dep:pyo3"]

[dependencies]
# generate-import-lib avoids needing a real Python install on the Windows CI
# runner at link time — PyO3 generates a stub import library instead.
pyo3 = { version = "0.28", features = ["extension-module", "generate-import-lib"], optional = true }

# Phonetic algorithms (metaphone, soundex). Port of Apache commons-codec, pure
# Rust. The upstream jellyfish Rust crate can't be used directly because it
# hard-depends on pyo3 and is published as cdylib-only.
rphonetic = "3"

# Unicode properties (Script, GeneralCategory) for codepoint_script /
# text_scripts, plus transliteration (experimental::transliterate, gated
# by the `unstable` feature) for the per-script Latin-conversion
# transliterators that back `text::translit::maybe_ascii`. The narrow
# set of 5 locales is wired up in `rust/src/text/translit.rs`.
# `compiled_data` bakes the CLDR tables into the binary.
icu = { version = "2", features = ["compiled_data", "unstable"] }

# Bitflags for the Normalize flag set (rigour/text/normalize.rs).
bitflags = "2"

# String distance — bit-parallel Levenshtein via the rapidfuzz crate.
# Used internally (e.g. the in-Rust name picker). Not exposed via PyO3:
# Python callers who need distance functions use the Python `rapidfuzz`
# package directly, which also provides the opcodes/alignment API the
# Rust crate lacks.
rapidfuzz = "0.5"

# LRU caches. Currently used for `maybe_ascii`'s per-thread result
# cache. Tiny crate (~500 LoC, no deps), O(1) get/put.
lru = "0.17"

# Aho-Corasick automaton for the multi-needle string search used by
# `names::matcher::Needles`, which backs org_types replacement, the
# symbol tagger, and anything else that needs "find these N strings
# in this text with Python-style `(?<!\w)...(?!\w)` boundaries."
# We tried the `regex` crate (DFA over literal alternations) and
# `fancy-regex` (adds lookaround). AC beats both — it's the right
# tool for pure literal search, and boundary checking as a post-
# filter is cheap.
aho-corasick = "1"

# `regex` crate — used by `names::prefix` for the anchored
# case-insensitive prefix-alternation pattern that Python's
# `_build_prefix_regex` compiles. The pattern has no lookaround so
# `regex` is a fit; one compiled `Regex` per prefix set, cached in a
# LazyLock.
regex = "1"

# Serde + serde_json for reading committed JSON data artifacts like
# rust/data/names/org_types.json inside a LazyLock at first use.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# zstd — compile-time compression of the person-names corpus
# (`rust/data/names/person_names.txt`) into compressed bytes baked
# into the binary via OUT_DIR. Runtime decodes on first access in
# `names::person_names`. See `build.rs` for the compression step
# and `plans/arch-rust-core.md` for the three-tier data-embedding
# strategy. Listed in both [dependencies] (runtime decode) and
# [build-dependencies] (build.rs uses the same crate for encoding).
zstd = "0.13"

[build-dependencies]
zstd = "0.13"

# NOTE: no [profile.release] overrides. Defaults are fine; revisit if benchmarks
# show measurable headroom from LTO / codegen-units=1.
