[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "namesdb"
version = "0.0.0"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "pyicu",
    "rigour",
    "sqlalchemy",
    "click",
    "nomenklatura",
    "rigour",
    "rich",
]

[project.scripts]
ndb = "namesdb.cli:cli"
